Update environment variables and add console log in auth.ts

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 POSTGRES_PRISMA_URL=
 POSTGRES_URL_NON_POOLING=
-NEXTAUTH_SECRET=
-GOOGLE_ID=
-GOOGLE_SECRET=
+NEXTAUTH_SECRET="supersecret"
+GOOGLE_ID="1074639481612-1sqacluprihkt10re1vshtb2hinj5eve.apps.googleusercontent.com"
+GOOGLE_SECRET="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"
 NEXTAUTH_URL=
