--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ NEXTAUTH_URL="http://localhost:3000"
 POSTGRES_PRISMA_URL="postgresql://mydev.com:r2pnmTdRjOl5@ep-empty-moon-a5wu1idc-pooler.us-east-2.aws.neon.tech/ChainBotDb?sslmode=require"
 # uncomment next line if you use Prisma <5.10
 # DATABASE_URL_UNPOOLED="postgresql://mydev.com:r2pnmTdRjOl5@ep-empty-moon-a5wu1idc.us-east-2.aws.neon.tech/ChainBotDb?sslmode=require"
+APP_NAME="ChainBot"
