--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ POSTGRES_PRISMA_URL="postgresql://mydev.com:r2pnmTdRjOl5@ep-empty-moon-a5wu1idc-
 # uncomment next line if you use Prisma <5.10
 # DATABASE_URL_UNPOOLED="postgresql://mydev.com:r2pnmTdRjOl5@ep-empty-moon-a5wu1idc.us-east-2.aws.neon.tech/ChainBotDb?sslmode=require"
 APP_NAME="ChainBot"
+ModelName="gpt2"
