--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,19 @@
 language: node_js
 node_js:
   - node
+cache:
+  npm: true
+  directories:
+    - ~/.npm
+    - ~/.cache
 install:
   - npm install
 script:
   - npm run build
-  - npm start
-
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local_dir: .next
+  on:
+    branch: main
